--- a/roomManager/src/main/resources/html/index.html
+++ b/roomManager/src/main/resources/html/index.html
@@ -6,6 +6,7 @@
   <meta content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no" id="viewport" name="viewport">
   <link rel="stylesheet" href="/netMeeting/static/css/signUp.css">
   <link rel="stylesheet" href="/netMeeting/static/css/popWindow.css">
+  <link rel="stylesheet" href="/netMeeting/static/css/personal.css">
   <script type="text/javascript" src="/netMeeting/static/js/laydate/laydate.js"></script>
   <script type="text/javascript" src="/netMeeting/static/js/echarts.min.js"></script>
   <title>netMeeting平台</title>
