--- a/roomManager/src/main/resources/html/index.html
+++ b/roomManager/src/main/resources/html/index.html
@@ -11,7 +11,7 @@
   <script type="text/javascript" src="/netMeeting/static/js/echarts.min.js"></script>
   <title>netMeeting平台</title>
 </head>
-<body style="height: 100%; margin: 0; background-color: #f5f5f8">
+<body style="margin: 0; background-color: #f5f5f8">
 
 <!--<script type="text/javascript" src="/tank/static/js/es6-promise.auto.min.js"></script>-->
 <!--<script type="text/javascript" src="/tank/static/js/fetch.min.js"></script>-->
